Fixing max-width on iphone round 2

--- a/static/css/guzzle.css
+++ b/static/css/guzzle.css
@@ -666,7 +666,8 @@ span.eqno {
 @media screen and (max-device-width: 480px) {
 
   .container {
-    max-width: 480px;
+    width: 100%;
+    max-width: 700px;
   }
 
   body {
